--- a/CSS/stayl.css
+++ b/CSS/stayl.css
@@ -1,4 +1,5 @@
 body{
+  font-family: 'Trebuchet MS', sans-serif;
     background-color: whitesmoke;
 }
 #location{
@@ -69,6 +70,8 @@ header a {
         margin-left: 20%;
       }
       main p {
+        font-family: Arial, Helvetica, sans-serif;
+        font-family: 'Arbutus';font-size: 25px;
         overflow: auto;
         margin-bottom: 20px;
       }
